--- a/script/Scrape_Abgeordnete_3.qmd
+++ b/script/Scrape_Abgeordnete_3.qmd
@@ -37,6 +37,14 @@ for (p in 1:length(profiles)) {
     Parliament = character()
   )
   
+  dates_of_q <- vector()
+  question_text <- vector()
+  answer_text <- vector()
+  topics <- vector()
+  parliaments <- vector()
+  qID <- vector()
+  teaser_q <- vector()
+  
   for (i in 0:no_of_q_pages[p]) {
     # replace just the last up to 3 digits
     profiles <- str_replace(profiles, "(?<=\\/)\\d{1,3}", as.character(i))
@@ -50,13 +58,7 @@ for (p in 1:length(profiles)) {
     # set link pieces together
     question_page <- paste("https://www.abgeordnetenwatch.de", link_q, sep = "")
     
-    dates_of_q <- vector()
-    question_text <- vector()
-    answer_text <- vector()
-    topics <- vector()
-    parliaments <- vector()
-    qID <- vector()
-    teaser_q <- vector()
+
     
     for (e in 1:length(question_page)) {
       # scrape question and answer from the question page
@@ -75,7 +77,7 @@ for (p in 1:length(profiles)) {
         html_text()
       # if text_q has 0 characters the teaser is the question
       if (length(text_q) == 0) {
-        text_q <- NA
+        text_q <- ""
       } else if (length(text_q) > 1) {
         text_q <- text_q[1]
       }
@@ -87,7 +89,7 @@ for (p in 1:length(profiles)) {
         html_text()
       # fallback if no answer exists
       if (length(text_a) == 0) {
-        text_a <- NA
+        text_a <- ""
       } else if (length(text_a) > 1) {
         text_a <- paste(text_a[1], text_a[2], sep = " ")
       }
@@ -110,11 +112,10 @@ for (p in 1:length(profiles)) {
       html_text()
     parliaments <- append(parliaments, parliament)
     }
-    
-    # transform data from vectors to dataframe
-    questions_meta_data <- rbind(questions_meta_data, list(dates_of_q, question_text, teaser_q, answer_text, qID, topics, parliaments))
-  
   }
+  # transform data from vectors to dataframe
+  questions_meta_data <- rbind(questions_meta_data, list(dates_of_q, question_text, teaser_q, answer_text, qID, topics, parliaments))
+  
   # correctly name the columns
   names(questions_meta_data) <- c("Date_of_Question", "Question", "Teaser_of_Question", "Answer", "Question_ID", "Topic", "Parliament")
   
